Bug 219268 - [GTK4] Declare lambda return type to avoid build error deducing it
Summary: [GTK4] Declare lambda return type to avoid build error deducing it
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Lauro Moura
URL:
Keywords: InRadar
Depends on:
Blocks: GTK4
  Show dependency treegraph
 
Reported: 2020-11-23 19:14 PST by Lauro Moura
Modified: 2020-11-26 18:57 PST (History)
4 users (show)

See Also:


Attachments
Patch (1.77 KB, patch)
2020-11-23 19:15 PST, Lauro Moura
no flags Details | Formatted Diff | Diff
Patch with gboolean (1.77 KB, patch)
2020-11-25 21:45 PST, Lauro Moura
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Lauro Moura 2020-11-23 19:14:28 PST
[GTK4] Declare lambda return type to avoid build error deducing it
Comment 1 Lauro Moura 2020-11-23 19:15:25 PST
Created attachment 414820 [details]
Patch
Comment 2 Carlos Garcia Campos 2020-11-23 23:11:53 PST
Comment on attachment 414820 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=414820&action=review

> Source/WebKit/UIProcess/gtk/WebPopupMenuProxyGtk.cpp:258
> -    g_signal_connect_swapped(controller, "key-pressed", G_CALLBACK(+[](WebPopupMenuProxyGtk* popupMenu, unsigned keyval, unsigned, GdkModifierType, GtkEventController* controller) {
> +    g_signal_connect_swapped(controller, "key-pressed", G_CALLBACK(+[](WebPopupMenuProxyGtk* popupMenu, unsigned keyval, unsigned, GdkModifierType, GtkEventController* controller) -> bool {

it should be gboolean, not bool
Comment 3 Lauro Moura 2020-11-25 21:45:40 PST
Created attachment 414878 [details]
Patch with gboolean
Comment 4 EWS 2020-11-26 18:56:04 PST
Committed r270177: <https://trac.webkit.org/changeset/270177>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 414878 [details].
Comment 5 Radar WebKit Bug Importer 2020-11-26 18:57:16 PST
<rdar://problem/71756197>