[GTK4] Declare lambda return type to avoid build error deducing it https://bugs.webkit.org/show_bug.cgi?id=219268

Reviewed by Adrian Perez de Castro.

* UIProcess/gtk/WebPopupMenuProxyGtk.cpp:
(WebKit::WebPopupMenuProxyGtk::createPopupMenu):


Canonical link: https://commits.webkit.org/231886@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270177 268f45cc-cd09-0410-ab3c-d52691b4dbfc